<resources>
    <string name="app_name">CCC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="partnered_with_university_of_limpopo">Partnered with University of limpopo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="i_agree_to_privacy_policy_and_t_amp_c_s"><![CDATA[I agree to privacy policy and T&C\'s]]></string>
    <string name="sign_in">sign in</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="send">Send</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please enter your email address you will receive a link to create a new password via email</string>
    <string name="invalid_name">Verify your name</string>
    <string name="invalid_password">Password should contain at least 6 characters and one special character </string>
    <string name="invalid_username">Invalid last name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_link_sent_check_your_email_to_change_password">Email link sent check your email to change password</string>
    <string name="report">Report</string>

    // chat
    <string name="cancel_time">Cancel time:</string>
    <string name="messages">Messages</string>
    <string name="request">Requets</string>
    <string name="last_seen">Last seen</string>
    <string name="display_message">Display message</string>
    <string name="date">Date</string>
    <string name="message">Message...</string>
    <string name="beginning_of_messages">Beginning of messages</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit Profile</string>

</resources>