<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:layout_margin="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/email"

        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/login_stroke_18_dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/email"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:backgroundTint="#18bac8"
        android:background="@drawable/login_18_dp_shape"
        app:backgroundTint="@color/black"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/send"
        app:cornerRadius="18dp"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:visibility="gone"/>
</LinearLayout>