<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/r_block"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/layout_18_dp_shape"
        android:backgroundTint="@color/white"
        android:id="@+id/lay1"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:background="@drawable/ccc_icon"
            />
        <EditText
            android:id="@+id/email"
            android:background="@drawable/login_stroke_18_dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:layout_marginTop="14dp"
            android:textColorHint="?colorButtonNormal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingEnd="14dp"
            android:paddingStart="14dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingEnd="14dp"
            android:paddingStart="14dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColorHint="?colorButtonNormal"
            android:background="@drawable/login_stroke_18_dp"
            android:hint="@string/password" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"

            android:textColor="#666666"
            android:id="@+id/forgot_password"
            android:layout_marginTop="14dp"
            android:layout_gravity="end"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/log_in"
            android:id="@+id/login_button"
            android:background="@drawable/login_18_dp_shape"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/partner..."
            android:layout_marginTop="16dp"
            android:text="@string/partnered_with_university_of_limpopo"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register..."
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:textColor="#666666"
                android:layout_marginStart="14dp"
                android:text="@string/create_account"
                android:layout_toEndOf="@id/register..."/>
        </RelativeLayout>


    </LinearLayout>




</RelativeLayout>