<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/r_block"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/layout_18_dp_shape"
        android:id="@+id/lay1"
        android:orientation="vertical">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:background="@drawable/ccc_icon"
                />
            <EditText
                android:id="@+id/firstName"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColorHint="?colorButtonNormal"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:layout_marginEnd="7dp"
                android:layout_weight=".5"
                android:background="@drawable/login_stroke_18_dp"
                android:layout_height="48dp"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/email"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:layout_weight=".5"
                android:textColorHint="?colorButtonNormal"

                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:background="@drawable/login_stroke_18_dp"
                android:layout_height="48dp"
                android:hint="@string/email" />
            <EditText
                android:id="@+id/date_picker"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:inputType="date"
                android:textColorHint="?colorButtonNormal"

                android:autofillHints="creditCardExpirationMonth"
                android:background="@drawable/login_stroke_18_dp"
                android:layout_height="48dp"
                android:hint="@string/phone_number" />
            <EditText
                android:id="@+id/password"
                android:layout_marginTop="14dp"
                android:layout_width="match_parent"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:autofillHints="password"
                android:textColorHint="?colorButtonNormal"

                android:inputType="textPassword"
                android:background="@drawable/login_stroke_18_dp"
                android:layout_height="48dp"
                android:hint="@string/password" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_privacy_policy_and_t_amp_c_s"
                android:layout_marginTop="14dp"
                android:textColorHint="#a2a2a2a2"

                android:autofillHints="password"
                android:layout_gravity="center"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/login_18_dp_shape"
                android:backgroundTint="#18bac8"
                android:textColor="@color/white"
                android:text="@string/sign_in"
                app:backgroundTint="@color/black"
                android:textSize="18sp"
                android:textAlignment="center"
                android:id="@+id/sign_in_button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/i_already_have_an_account"
                android:id="@+id/login"
                android:layout_gravity="center"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="16dp"
                android:textColor="#148d92"/>

        </LinearLayout>

</RelativeLayout>